# sub-agents-skills

./: .gitignore  .pre-commit-config.yaml  README.md  install.sh  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/workflows/: test.yml
.grok-plugin/: marketplace.json
plugins/runner/: plugin.json
plugins/runner/.codex-plugin/: plugin.json
plugins/runner/skills/sub-agents/: SKILL.md
plugins/runner/skills/sub-agents/agents/: openai.yaml
plugins/runner/skills/sub-agents/references/: codex.md
plugins/runner/skills/sub-agents/scripts/: _builder.py  _constants.py  _executor.py  _resolver.py  _stream.py  run_subagent.py
scripts/: sync_plugin.py
skills/sub-agents/: SKILL.md
skills/sub-agents/agents/: openai.yaml
skills/sub-agents/references/: cli-formats.md  codex.md
skills/sub-agents/scripts/: _builder.py  _executor.py  _loader.py  _resolver.py  _stream.py  run_subagent.py
tests/: conftest.py  test_builder.py  test_codex_plugin_marketplace.py  test_executor.py  test_loader.py  test_resolver.py  test_run_subagent.py  test_stream.py
